# rag-vs-pag

./: .env.example  .gitignore  Makefile  README.md  compare.py  pyproject.toml  regenerate_transcript.py
benchmark/: __init__.py  metrics.py  run.py  summary.py
corpus/: ATTRIBUTIONS.md  fetch.py  sources.toml
docs/: GLOSSARY.md  REPRODUCIBILITY.md  findings.md
extraction/: __init__.py  extractor_prompt.md  feature_dictionary.json  shared_extractor.py
pearl/: build.py  build.sh  diff_ruleset.py  feature_dictionary.json  generate_review.py  generate_traces.py  keyword_extractor.py  pearl.py  pearl_r.py  regression.py  statute_structure.json  traces.csv  traces_review.md
pipelines/: __init__.py  logicpearl.py  rag.py  rag_chunklookup.py
rag/: __init__.py  index.py  rag.py  rag_chunklookup.py  retrieve.py
ragdemo/: __init__.py  corpus.py  llm.py  llm_anthropic.py  llm_ollama.py  llm_openai.py  scenarios.py
scenarios/: 01_classified_memo.json  02_purely_internal_personnel_rule.json  03_exempt_by_other_statute.json  04_trade_secret.json  05_predecisional_memo.json  06_personnel_privacy.json  07_law_enforcement_source.json  08_bank_exam.json  09_geological_well_data.json  10_clean_releasable.json  11_borderline_declassified.json  12_borderline_routine_memo.json  13_borderline_personnel_roster.json  14_le_no_harm.json  14_ood_novel_case.json  15_rag_favored_synthesis.json  README.md  adjudication.100.live.json  cases.json  generate_scenarios.py  manual_review.100.live.clean.json  muckrock_snapshot.100.live.clean.approved.json  muckrock_snapshot.100.live.clean.json  (+4 more)
(+156 files in other folders)
