[project]
name = "rag-demo"
version = "0.1.0"
description = "Replacing RAG with LogicPearl as the decision layer for an LLM, on real FOIA primary sources."
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40",
  "openai>=1.50",
  "ollama>=0.3",
  "chromadb>=0.5",
  "rank-bm25>=0.2",
  "sentence-transformers>=3.0",
  "pypdf>=5.0",
  "httpx>=0.27",
  "rich>=13.7",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ragdemo"]

[tool.pytest.ini_options]
markers = [
  "live: runs a real LLM or network call; skipped unless --run-live is passed",
]
testpaths = ["tests"]
